Fixed the alignment of the tool__contend class.

--- a/app/css/_05-objects.scss
+++ b/app/css/_05-objects.scss
@@ -60,8 +60,8 @@
   margin: 2rem;
   opacity: 0.2;
   padding: 3rem;
-  height: 750px;
-  width: 650px;
+  height: 95vh;
+  width: 95%;
 }
 
 .tile-small {
@@ -73,8 +73,8 @@
   margin: 2rem;
   opacity: 0.2;
   padding: 3rem;
-  height: 350px;
-  width: 650px;
+  height: 50vh;
+  width: 95%;
 }
 
 /*
